--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,9 @@
     <title>WELCOME TO IDEXCEL</title>
 </head>
 <body>
-    <h1>Click the link below to open the website:</h1>
+    <h1>Click the link below to open the IDEXCEL website:</h1>
     
     <!-- Opens the website when clicked -->
-    <a href="https://www.idexcel.com" target="_blank">Visit Example Website</a>
+    <a href="https://www.idexcel.com" target="_blank">Visit IDEXCEL Website</a>
 </body>
 </html>
