--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <style>
         /* Background color for the entire page */
         body {
-            background-color: #FFFFFF; /* White */
+            background-color: #FF474C;
             display: flex;
             justify-content: center;
             align-items: center;
