--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <style>
         /* Background color for the entire page */
         body {
-            background-color: #FF474C;
+            background-color: #00FF00;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -19,9 +19,9 @@
 
         /* Blinking animation for H1 */
         @keyframes blink {
-            0% { opacity: 1; color: red; }
-            50% { opacity: 0.5; color: yellow; }
-            100% { opacity: 1; color: red; }
+            0% { opacity: 1; color: green; }
+            50% { opacity: 0.5; color: blue; }
+            100% { opacity: 1; color: green; }
         }
         .blink {
             font-size: 32px;
