Update background-color: #f0f0f0 in  index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <style>
         /* Background color for the entire page */
         body {
-            background-color: #00FF00;
+            background-color: #f0f0f0; /* Light gray */
             display: flex;
             justify-content: center;
             align-items: center;
